TP2/api/api-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.master3.takima.io/guide/kubernetes-resources/api:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: auth-master3-registry
