TP2/api/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: api-ingress
spec:
  rules:
  - host: api.catherine-vanden-hende.takima.cloud
    http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.catherine-vanden-hende.takima.cloud
    secretName: app-wildcard-student
